fix overflow of navbar filters (check if there are conflicts)  navbar to be fixed

--- a/frontend/src/css/navbar.css
+++ b/frontend/src/css/navbar.css
@@ -15,7 +15,7 @@
   background-color: var(--background);
   z-index: var(--navbar-z-index);
   font-family: 'Noto Sans JP', sans-serif;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .nav-container {
